--- a/src/index.css
+++ b/src/index.css
@@ -119,3 +119,10 @@ hr {
   font-weight: 400;
   src: url(/public/fonts/spacemono-n400.ttf) format("ttf");
 }
+
+.commit {
+  font-family: 'Space Mono', monospace;
+  font-style: normal;
+  font-weight: 400;
+  src: url(/public/fonts/spacemono-n400.ttf) format("ttf");
+}
